[gd_scene load_steps=12 format=3 uid="uid://cjkrpn6nhhs0c"]

[ext_resource type="Script" uid="uid://dh8o41wpv6qq2" path="res://Assets/Scripts/Player Scripts/player.gd" id="1_5wdm8"]
[ext_resource type="Texture2D" uid="uid://hgn16cdw4g8d" path="res://Assets/Art/Sprites/LightAura.png" id="2_b8405"]
[ext_resource type="Texture2D" uid="uid://dbi32xbkn2es3" path="res://Assets/Art/Sprites/PlaceholderSpriteSheet.png" id="3_dolgl"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_pfke8"]
radius = 6.0
height = 22.0

[sub_resource type="Animation" id="Animation_keglp"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [12]
}

[sub_resource type="Animation" id="Animation_ffkdq"]
resource_name = "WalkDown"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5]
}

[sub_resource type="Animation" id="Animation_3kogm"]
resource_name = "WalkLeft"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [12, 13, 14, 15, 16, 17]
}

[sub_resource type="Animation" id="Animation_twjg6"]
resource_name = "WalkRight"
length = 0.5
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [12, 13, 14, 15, 16, 17]
}

[sub_resource type="Animation" id="Animation_ayg5y"]
resource_name = "WalkUp"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [24, 25, 26, 27, 28, 29]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_ayg5y"]
_data = {
&"RESET": SubResource("Animation_keglp"),
&"WalkDown": SubResource("Animation_ffkdq"),
&"WalkLeft": SubResource("Animation_3kogm"),
&"WalkRight": SubResource("Animation_twjg6"),
&"WalkUp": SubResource("Animation_ayg5y")
}

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_bkju3"]
radius = 6.0
height = 22.0

[node name="Player" type="CharacterBody2D"]
collision_mask = 10
script = ExtResource("1_5wdm8")

[node name="PointLight2D" type="PointLight2D" parent="."]
scale = Vector2(0.35, 0.35)
color = Color(1, 0.987353, 0.258861, 1)
energy = 0.6
shadow_enabled = true
texture = ExtResource("2_b8405")
offset = Vector2(5, 40)

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 1)
shape = SubResource("CapsuleShape2D_pfke8")

[node name="PlayerSprite" type="Sprite2D" parent="."]
modulate = Color(0.8, 1, 1, 1)
texture_filter = 1
texture = ExtResource("3_dolgl")
hframes = 6
vframes = 5
frame = 12

[node name="SpriteAnimation" type="AnimationPlayer" parent="PlayerSprite"]
libraries = {
&"": SubResource("AnimationLibrary_ayg5y")
}

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(0, 1)
shape = SubResource("CapsuleShape2D_bkju3")

[node name="Camera2D" type="Camera2D" parent="."]
visible = false
position_smoothing_speed = 150.0
drag_horizontal_enabled = true
drag_left_margin = 0.02
drag_top_margin = 0.02
drag_right_margin = 0.02
drag_bottom_margin = 0.02

[node name="Weapon" type="Node2D" parent="."]

[node name="WeaponSprite" type="Sprite2D" parent="Weapon"]
offset = Vector2(5, 0)

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_area_2d_body_exited"]
